--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "mysql2": "^1.6.5",
     "node-sass-middleware": "0.11.0",
-    "sequelize": "^5.8.7"
+    "sequelize": "^5.8.7",
+    "sequelize-cli": "^5.5.0"
   }
 }
