--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
+config/config.json
 node_modules*
 
 # Typescript v1 declaration files
