--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "node-sass-middleware": "0.11.0",
+    "nodemailer": "^6.3.1",
     "sequelize": "^5.8.7",
     "sequelize-cli": "^5.5.0"
   }
